# claif-cli

./: .gitignore  README.md  pyproject.toml
asciinema_recording_samples/: recording_1_revision_1.txt  recording_1_revision_2.txt  recording_1_revision_3.txt  recording_2_revision_1.txt  recording_3_revision_1.txt  recording_4_revision_1.txt  recording_5_revision_1.txt  recording_6_revision_1.txt  recording_7_revision_1.txt  recording_8_revision_1.txt
claif_cli/: annotation_reviews.py  api_requests.py  audio_files.py  auth_utils.py  display_utils.py  main.py  recordings.py
